name:          event
version:       0.1
synopsis:      Scalable event notification
description:
  Scalable event notification for file handles, sockets, timers, etc.
license:       BSD3
license-file:  LICENSE
author:        Bryan O'Sullivan <bos@serpentine.com>
               Johan Tibell <johan.tibell@gmail.com>
maintainer:    Johan Tibell <johan.tibell@gmail.com>
category:      System

build-type:    Configure
cabal-version: >= 1.6
extra-source-files:
  README.md config.guess config.sub install-sh configure.ac configure
  include/EventConfig.h

flag test
  description: Build test program.
  default:     False

library
  exposed-modules:
    System.Event

  other-modules:
    System.Event.Array
    System.Event.Control
    System.Event.IntMap
    System.Event.Internal
    System.Event.Vector
    System.Event.TimeoutTable
    System.Event.TimeoutTable.Internal
    System.Event.Unique

  build-depends:
    array,
    base < 5,
    containers,
    ghc-prim,
    time < 1.2,
    unix

  if os(darwin)
    other-modules:
      System.Event.KQueue
    cpp-options: -DBACKEND_KQUEUE
  else
    if os(linux)
      other-modules:
        System.Event.EPoll
      cpp-options: -DBACKEND_EPOLL

  extensions:
    CPP,
    ExistentialQuantification,
    ForeignFunctionInterface,
    MagicHash,
    UnboxedTuples

  ghc-options: -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  hs-source-dirs: src
  include-dirs: include


Executable test
  hs-source-dirs:  src, tests
  main-is:         RunTests.hs

  build-depends:
    array,
    base < 5,
    containers,
    ghc-prim,
    HUnit < 1.3,
    old-locale,
    QuickCheck == 1.2.0.0,
    test-framework < 0.3,
    test-framework-hunit < 0.3,
    test-framework-quickcheck < 0.3,
    time < 1.2,
    unix

  if os(darwin)
    other-modules:
      System.Event.KQueue
    cpp-options: -DBACKEND_KQUEUE
  else
    if os(linux)
      other-modules:
        System.Event.EPoll
      cpp-options: -DBACKEND_EPOLL

  ghc-options: -Wall -funbox-strict-fields -fhpc
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  if !flag(test)
    buildable:     False


source-repository head
  type:     git
  location: git://github.com/tibbe/event.git
